[package]
name = "llmsdl"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A fast CLI tool for downloading documentation files from websites that implement the llms.txt standard"
repository = "https://github.com/h0wl/llmsdl"
keywords = ["cli", "ai", "llms", "downloader"]
categories = ["command-line-utilities"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
url = "2.4"
anyhow = "1.0"
indicatif = "0.17"
futures = "0.3"


